--- a/style.css
+++ b/style.css
@@ -70,3 +70,30 @@ footer
     height: 100px;
     color: #F0E8C2;
 }
+
+.pe
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    margin-top: 20px;
+    margin-left: 90px;
+    color: darkslategray;
+}
+
+#link
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    color:#573A37;
+    text-decoration: none;
+}
+
+.fa-solid:hover
+{
+    transition: 0.2s;
+    font-size: 25px;
+}
